--- a/monitoring/grafana/provisioning/alerting/alert-rule.yml
+++ b/monitoring/grafana/provisioning/alerting/alert-rule.yml
@@ -65,3 +65,68 @@ groups:
         isPaused: false
         notification_settings:
           receiver: TicketPing-Discord
+  - orgId: 1
+    name: CircuitBreaker Open or Half_Open for 5m
+    folder: TicketPing
+    interval: 1m
+    rules:
+      - uid: ee6pngjotjrpce
+        title: CircuitBreaker Open or Half_Open for 5m
+        condition: C
+        data:
+          - refId: A
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: PBFA97CFB590B2093
+            model:
+              disableTextWrap: false
+              editorMode: builder
+              exemplar: false
+              expr: sum by(name) (avg_over_time(resilience4j_circuitbreaker_state{state=~"open|half_open"}[5m]))
+              fullMetaSearch: false
+              includeNullMetadata: true
+              instant: true
+              intervalMs: 1000
+              legendFormat: __auto
+              maxDataPoints: 43200
+              range: false
+              refId: A
+              useBackend: false
+          - refId: C
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: __expr__
+            model:
+              conditions:
+                - evaluator:
+                    params:
+                      - 0.99
+                    type: gt
+                  operator:
+                    type: and
+                  query:
+                    params:
+                      - C
+                  reducer:
+                    params: []
+                    type: last
+                  type: query
+              datasource:
+                type: __expr__
+                uid: __expr__
+              expression: A
+              intervalMs: 1000
+              maxDataPoints: 43200
+              refId: C
+              type: threshold
+        noDataState: OK
+        execErrState: Error
+        for: 1m
+        annotations:
+          description: '"CircuitBreaker ''{{ $labels.name }}'' has been in an OPEN or HALF_OPEN state for 5 minutes."'
+        labels: {}
+        isPaused: false
+        notification_settings:
+          receiver: TicketPing-Discord
